--- a/Deals/Index.html
+++ b/Deals/Index.html
@@ -5,7 +5,7 @@ layout: default
 
 <div class="posts">
     
-    {% for post in site.categories.Deals %}
+    {% for post in site.categories.deals %}
         {% if post.url %}
            <a id="h1a" href="{{ post.url }}">{{ post.title }}</a>
             <p id="date">{{ post.author }} • {{ post.date | date: "%b %-d, %Y" }}</p>
