--- a/Deals/Index.html
+++ b/Deals/Index.html
@@ -1,13 +1,15 @@
 ---
 layout: default
 ---
+
 <div class="space1"></div>
 
 <div class="posts">
     
-    {% for post in site.categories.deals %}
+    {% for post in site.categories.Deals %}
         {% if post.url %}
            <a id="h1a" href="{{ post.url }}">{{ post.title }}</a>
+           
             <div id="excerpt">{{ post.excerpt }}  </div>
             <div id="readmore"><a href="{{ post.url | prepend: site.baseurl }}">Read More</a></div>
        {% endif %}
