--- a/Deals/index.html
+++ b/Deals/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <div class="posts">
     
-    {% for post in site.categories.WorkFromHome %}
+    {% for post in site.categories.Deals %}
         {% if post.url %}
            <a id="h1a" href="{{ post.url }}">{{ post.title }}</a>
             <p id="date">{{ post.author }} • {{ post.date | date: "%b %-d, %Y" }}</p>
