--- a/Work From Home/index.html
+++ b/Work From Home/index.html
@@ -1,12 +1,14 @@
 ---
 layout: default
 ---
+
+<div class="space1"></div>
+
 <div class="posts">
     
     {% for post in site.categories.WorkFromHome %}
         {% if post.url %}
            <a id="h1a" href="{{ post.url }}">{{ post.title }}</a>
-            <p id="date">{{ post.author }} • {{ post.date | date: "%b %-d, %Y" }}</p>
             <div id="excerpt">{{ post.excerpt }}  </div>
             <div id="readmore"><a href="{{ post.url | prepend: site.baseurl }}">Read More</a></div>
        {% endif %}
