--- a/Investing/index.html
+++ b/Investing/index.html
@@ -1,6 +1,9 @@
 ---
 layout: default
 ---
+
+<div class="space1"></div>
+
 <div class="posts">
     
     {% for post in site.categories.Investing %}
