--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@ layout: default
 
 <div class="posts">
 
+<h1>hey</h1>
 
     {% for post in paginator.posts %}
 
            <a id="h1a" href="{{ post.url }}">{{ post.title }}</a>
             <div id="excerpt">{{ post.excerpt }}  </div>
             <div id="readmore"><a href="{{ post.url }}">Read More</a></div>
-       
+
     {% endfor %}
 
     {% if paginator.total_pages > 1 %}
@@ -40,6 +41,5 @@ layout: default
   {% endif %}
 </div>
 {% endif %}
-    
-</div>
 
+</div>
